--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -73,7 +73,7 @@
           <image class="course-category-icon" src="{{item.icon}}"></image>
         </view>
         <view class="course-info">
-          <text class="course-title">{{item.title}}</text>
+          <view class="course-title-container"><text class="course-title">{{item.title}}</text></view>
           <text class="course-category">{{item.category}}</text>
         </view>
         <view class="course-status">
