feat: 学习课程之后必须做完作业

--- a/pages/learning/learning.wxml
+++ b/pages/learning/learning.wxml
@@ -76,7 +76,7 @@
         <view class="assignment-title">
           <view class="assignment-status-icon">
             <image wx:if="{{item.status === 'completed'}}" src="/images/xuexi-wancheng.svg" mode="aspectFit" />
-            <image wx:elif="{{item.status === 'available'}}" src="/images/xuexi-daikaifa.svg" mode="aspectFit" />
+            <image wx:elif="{{item.status === 'available'}}" src="/images/xuexi-daikaifa.svg" mode="aspectFit" class="anim-shake" />
             <image wx:else src="/images/xuexi-suoding.svg" mode="aspectFit" />
           </view>
           <text class="assignment-title-text">{{item.title}}</text>
